added correct links to lewagon

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <img class="Main_Image" src="images/Kev Profile.jpeg" alt="Kevin">
 
         <p>Programmer in training 💻 from └A 🌴 <br>Adventure seeker, aspiring to be a great story teller 🌎 </p>
-        <a id="link" href="https://www.lewagon.com/v" target="_blank">
+        <a id="link" href="https://www.lewagon.com/" target="_blank">
         LeWagon
         </a>
       </div>
@@ -28,7 +28,9 @@
       <ul>
       <li><a href="https://www.facebook.com/supkev" target="_blank"><i class="fa-brands fa-facebook"></i>
       </a></li>
-      <li><a href="https://www.instagram.com/supkev" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+      <li><a href="https://www.instagram.com/supkev" target="_blank"><i class="fa-brands fa-instagram"></i>
+      </a></li>
+      <li><a href="https://github.com/sup-kev" target="_blank"><i class="fa-brands fa-github-alt"></i></i>
       </ul>
     </div>
 </body>
